--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "massive": "^4.7.1",
-    "dotenv": "^5.0.1"
+    "sails-postgresql": "^0.11.4"
   },
-  "engines" : {
-    "node" : "6.11.1"
+  "engines": {
+    "node": "6.11.1"
   }
 }
